static/assets/css/style.css
/* ... */
.midc2 {
  width: 20%;
}

.midc3 {
  width: 14.5%;
}

.txt1-cart {
  color: #343434;
  padding: 8px 0;
  font-family: "Source Sans Pro", sans-serif;
  font-weight: 400;
  text-align: left;
  font-size: 18px;
}

.procrt {
  margin: 0 20px;
  padding-top: 2px;
  float: left;
}

.c1 {
  padding-left: 2.3%;
}

.txt3-crt {
  padding-top: 10px;
  color: #454545;
  font-family: "Source Sans Pro", sans-serif;
  font-weight: 400;
}

.txt3-crt span {
  color: #066035;
}

.drop {
  width: 40%;
  height: 30px;
  border: 1px solid #e9e9e9;
}

.pinktxt1 {
  color: #066035;
  font-size: 22px;
}

.sec1crt-row4td-l {
  text-align: right;
  width: 40%;
}

.sec1crt-row4td-r {
  text-align: left;
  padding-left: 25px;
  width: 40%;
}

.sec1crt-row4td-l,
.sec1crt-row4td-r {
  font-size: 20px;
  color: #686868;
  font-family: "Source Sans Pro", sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom: 1px solid #e9e9e9;
}

.grand {
  font-size: 22px;
  color: #3a3a3a;
  border: none;
}

/************/

.sec1crt-frm {
  margin-top: 30px;
  float: left;
  width: 100%;
  padding: 0 25px 25px 25px;
  border-top: 1px solid #e9e9e9;
}

.confidence {
  width: 100%;
  float: left;
  box-sizing: border-box;
  padding: 15px 0;
}

.txtconfi {
  float: left;
  font-size: 20px;
  color: #191919;
  font-weight: 400;
  padding-top: 10px;
}

.confi-img {
  float: left;
  margin: 0 0 0 15px;
}

.sec1crt-frmlft {
  float: left;
  width: 48%;
  border-radius: 3px;
  border: 1px solid #b0ceaa;
}

.sec1crt-frmrgt {
  float: right;
  width: 48%;
  border-radius: 3px;
  border: 1px solid #b0ceaa;
}

.form-container {
  width: 100%;
  height: 655px;
  float: left;
}

.form-top {
  width: 100%;
  height: 60px;
  background: #c7d5c4;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
  text-align: left;
  position: relative;
  padding-left: 80px;
}

.hdng-icon {
  position: absolute;
  left: 15px;
  top: 10px;
}

.txt2-chk {
  float: left;
  width: 100%;
  font-weight: 600;
  line-height: 58px;
  font-size: 22px;
  color: #393939;
  text-transform: uppercase;
}

.form-content {
  width: 100%;
  padding: 20px;
  float: left;
  box-sizing: border-box;
}

.frmelements {
  width: 100%;
  float: left;
  margin: 0 0 18px 0;
}

.frmelements label {
  float: left;
  width: 100%;
  font-family: "Source Sans Pro", sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 16px;
  color: #3e3e3e;
  text-align: left;
  padding-bottom: 8px;
}

.field {
  float: left;
  width: 100%;
  height: 45px;
  position: relative;
  overflow: hidden;
  background: #fff;
  border: 1px solid #6d6d6d;
  position: relative;
  box-sizing: border-box;
  border-radius: 4px;
  padding-left: 45px;
}

.icon-box {
  float: left;
  width: 40px;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  text-align: center;
}

.icon-box img {
  display: inline-block;
  margin-top: 6px;
}

.ft-input,
.frmelements select {
  float: right;
  width: 100%;
  border: none;
  padding-right: 10px;
  height: 45px;
  line-height: 40px;
  color: #727272;
  font-size: 18px;
  font-family: "Source Sans Pro", sans-serif;
  outline: none;
}

.frmelements select {
  background: url(/static/assets/images/arrow-input.png) no-repeat center right;
}

.frmelements select {
  -moz-appearance: none;
  -webkit-appearance: none;
}

::-webkit-input-placeholder {
  color: #727272;
}

:-moz-placeholder {
  color: #727272;
}

/* Firefox 18- */

::-moz-placeholder {
  color: #727272;
}

/* Firefox 19+ */

:-ms-input-placeholder {
  color: #727272;
}

.short1,
.short2 {
  width: 48%;
  float: left;
}

.short2 {
  float: right;
}

.billing-toggle-txt {
  float: left;
  width: 100%;
  margin: 10px 0 20px 0;
  font-size: 16px;
  color: #626262;
  text-align: left;
}

.chkbx-chk {
  display: inline-block;
  vertical-align: middle;
  margin-right: 5px;
}

.cards {
  margin: 20px 0;
  float: left;
  padding-left: 100px;
}

.field.no-icon {
  padding-left: 10px;
}

.whats-this {
  float: left;
  text-align: left;
  color: #066035;
  font-size: 16px;
  margin-top: 34px;
}

.button-crt {
  float: left;
  cursor: pointer;
}

.postal-crt {
  margin-top: 3px;
  display: inline-block;
}

.visible-opt {
  visibility: hidden;
}

@media only screen and (max-width: 1010px) {
  .sec1-cartin {
    margin: 40px 0;
  }

  .sec1crt-row4td-l,
  .sec1crt-row4td-r {
    font-size: 17px;
  }

  .grand {
    font-size: 17px;
  }

  .midc2 {
    width: 22%;
  }

  .sec1crt-frm {
    padding: 0 15px 25px 15px;
  }

  .txt2-chk {
    font-size: 18px;
  }

  .short1,
  .short2 {
    width: 100%;
  }

  .short2.mob-sort,
  .short1.mob-sort {
    width: 48%;
  }

  .visible-opt {
    visibility: visible;
  }
}

@media only screen and (max-width: 767px) {
  table.tbl2 {
    padding: 0 10px;
  }

  .txtconfi {
    font-size: 17px;
  }

  .confi-img {
    width: 130px;
  }

  .row1 {
    font-size: 18px;
    padding: 5px 0;
  }

  .txt1-cart {
    font-size: 15px;
  }

  .procrt {
    margin: 0 5px;
  }

  .midc3 {
    width: 15%;
  }

  .pinktxt1 {
    font-size: 17px;
  }

  .c3 {
    width: 16%;
  }

  .procrt {
    width: 50px;
  }

  .drop {
    margin: 0 auto;
    display: table;
  }

  .midc2 {
    width: 30%;
  }

  .sec1crt-row4td-r {
    padding-left: 15px;
    width: 27%;
  }

  .sec1crt-row4td-l {
    width: 45%;
  }

  .sec1crt-frm {
    padding: 0 10px 0 10px;
  }

  .hdng-icon {
    left: 5px;
  }

  .form-top {
    padding-left: 70px;
  }

  .txt2-chk {
    font-size: 17px;
  }

  .sec1crt-frmlft,
  .sec1crt-frmrgt {
    width: 100%;
    margin-bottom: 20px;
  }

  .form-content {
    padding: 15px;
  }

  .prd-sec1-txt5 {
    text-align: left;
  }
}
/* ... */

